See #23721: Application hangs indefinitely if Bing API unavailable
BingAerialTileSource.getAttribution is supposed to exit quickly and return `null`
if the attributions are not yet loaded. Instead `attributions.get()` was doing
the following:

1. Creating a new attributions loader on a different thread (if it didn't exist)
2. ''Waiting'' for the attributions loader to finish
3. If the loader finished properly, we returned the actual data. Otherwise, `null` was returned.

This additionally fixes some lint issues, of specific note `URL` constructors are
deprecated (for details, see https://inside.java/2023/02/15/quality-heads-up/ ).